# aws-auth

./: .gitignore  Cargo.toml
.github/workflows/: build.yaml
src/: cache.rs  cmd.rs  common.rs  creds.rs  eks.rs  main.rs  oidc.rs  types.rs  utils.rs
src/alias_providers/: mod.rs
src/aws_sso/: auth.rs  cache.rs  config.rs  mod.rs
src/commands/: alias.rs  eval.rs  exec.rs  init.rs  logout.rs  mod.rs  ssm.rs  sso.rs  unlock.rs
src/commands/batch/: exec.rs  mod.rs  worker.rs
src/commands/core/: eval.rs  exec.rs  mod.rs
src/commands/core/eks/: mod.rs  sign.rs
src/commands/eks/: cache.rs  mod.rs  sign.rs
src/credential_providers/: aws_cmd.rs  aws_sso.rs  mod.rs
src/credential_providers/aws_sso/: auth.rs  aws.rs  aws_cache.rs  cache.rs  config.rs  eks.rs  mod.rs  types.rs  utils.rs
src/ssm/: host.rs  mod.rs  session.rs
src/utils/: elog.rs  lock.rs  mod.rs  toolmanager.rs  worker.rs
src/utils/formatters/: json.rs  mod.rs  text.rs
