[package]
name = "aws-sso-eks-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.4"
aws-sdk-sts = "1.34.0"
aws-sigv4 = "1.2.3"
aws-smithy-runtime-api = "1.7.1"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
