[package]
name = "aws-auth"
version = "0.2.7"
edition = "2021"

[dependencies]
aws-config = "1.8.15"
aws-sdk-sso = "1.97.0"
aws-sdk-ssooidc = "1.99.0"
aws-sdk-sts = "1.101.0"
aws-sigv4 = "1.4.2"
aws-smithy-runtime-api = "1.11.6"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
home = "0.5.12"
http = "1.4.0"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
webbrowser = "1.2.0"
